still working on building working executable